# Apex-RawCL

./: CMakeLists.txt  README.md
benchmark/: Benchmarker.cpp  Benchmarker.h  SimplePolygonBenchmark.cpp  SimplePolygonBenchmark.h
cmake/: apex.pc.in
cmake/modules/: FindEigen.cmake  FindGoogleTest.cmake
cmake/modules/GetEigenVersion/: GetEigenVersion.cpp
include/: ApexException.h  Coordinate.h  EdgeInclusion.h  FillType.h  ParallelogramException.h  Point2.h  Polygon.h  SimplePolygon.h  SimplePolygonBatch.h
include_private/: BenchmarkData.h  Benchmarks.h  Device.h  DeviceStatistics.h  KernelMacro.h  OpenCL.h  OpenCLContext.h  OpenCLDevices.h
include_private/benchmarks/: GeForceGTX560.h  GeForceGTX660M.h  GeforceGTX560.h  IntelI72600K.h  IntelI73610QM.h  IntelIvyBridgeMGT2.h  Predictor.h
src/: ApexException.cpp  ParallelogramException.cpp  Point2.cpp  Polygon.cpp  SimplePolygon.cpp  SimplePolygonBatch.cpp
src/polygon_algorithms/: Area.cl  Area.cpp  Contains.cl  Contains.cpp
src/private/: BenchmarkData.cpp  Benchmarks.cpp  DeviceStatistics.cpp  OpenCLContext.cpp  OpenCLDevices.cpp
test/: SimplePolygonTestGroper.cpp  SimplePolygonTestGroper.h  TestPolygonArea.cpp  TestPolygonTranslate.cpp  TestSimplePolygonArea.cpp  TestSimplePolygonBatch.cpp  TestSimplePolygonContains.cpp
test/helpers/: MockBuffer.cpp  MockBuffer.h  MockCommandQueue.cpp  MockCommandQueue.h  MockContext.h  MockDevice.cpp  MockDevice.h  MockOpenCLContext.cpp  MockOpenCLContext.h  SimplePolygonBatchGroper.h  SimplePolygonTestGroper.cpp  SimplePolygonTestGroper.h
test/private/: TestOpenCLDevices.cpp
